--- a/basics.html
+++ b/basics.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Zach Bogart, Joyce Robbins">
 
 
-<meta name="date" content="2019-03-14">
+<meta name="date" content="2019-03-24">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -256,21 +256,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4" data-path="contribute.html"><a href="contribute.html"><i class="fa fa-check"></i><b>4</b> Contribute to this Resource</a><ul>
 <li class="chapter" data-level="4.1" data-path="contribute.html"><a href="contribute.html#overview-2"><i class="fa fa-check"></i><b>4.1</b> Overview</a></li>
 <li class="chapter" data-level="4.2" data-path="contribute.html"><a href="contribute.html#why-contribute"><i class="fa fa-check"></i><b>4.2</b> Why contribute?</a></li>
-<li class="chapter" data-level="4.3" data-path="contribute.html"><a href="contribute.html#ways-you-can-contribute-github-only"><i class="fa fa-check"></i><b>4.3</b> Ways you can contribute (Github only)</a><ul>
-<li class="chapter" data-level="4.3.1" data-path="contribute.html"><a href="contribute.html#contribute-directly"><i class="fa fa-check"></i><b>4.3.1</b> Contribute directly</a></li>
-<li class="chapter" data-level="4.3.2" data-path="contribute.html"><a href="contribute.html#submit-an-issue"><i class="fa fa-check"></i><b>4.3.2</b> Submit an issue</a></li>
-<li class="chapter" data-level="4.3.3" data-path="contribute.html"><a href="contribute.html#solve-an-open-issue"><i class="fa fa-check"></i><b>4.3.3</b> Solve an open issue</a></li>
+<li class="chapter" data-level="4.3" data-path="contribute.html"><a href="contribute.html#ways-you-can-contribute-using-github.com-only"><i class="fa fa-check"></i><b>4.3</b> Ways you can contribute (using GitHub.com only)</a><ul>
+<li class="chapter" data-level="4.3.1" data-path="contribute.html"><a href="contribute.html#submit-an-issue"><i class="fa fa-check"></i><b>4.3.1</b> Submit an issue</a></li>
+<li class="chapter" data-level="4.3.2" data-path="contribute.html"><a href="contribute.html#contribute-online"><i class="fa fa-check"></i><b>4.3.2</b> Contribute online</a></li>
+<li class="chapter" data-level="4.3.3" data-path="contribute.html"><a href="contribute.html#contribute-code"><i class="fa fa-check"></i><b>4.3.3</b> Contribute code</a></li>
+<li class="chapter" data-level="4.3.4" data-path="contribute.html"><a href="contribute.html#solve-an-open-issue"><i class="fa fa-check"></i><b>4.3.4</b> Solve an open issue</a></li>
 </ul></li>
-<li class="chapter" data-level="4.4" data-path="contribute.html"><a href="contribute.html#ways-you-can-contribute-need-to-use-git"><i class="fa fa-check"></i><b>4.4</b> Ways you can contribute (need to use Git)</a><ul>
-<li class="chapter" data-level="4.4.1" data-path="contribute.html"><a href="contribute.html#step-1-fork-the-upstream-repo-once"><i class="fa fa-check"></i><b>4.4.1</b> Step 1: Fork the upstream repo (once)</a></li>
-<li class="chapter" data-level="4.4.2" data-path="contribute.html"><a href="contribute.html#step-2-clone-origin-and-create-a-local-repository-once"><i class="fa fa-check"></i><b>4.4.2</b> Step 2: Clone origin and create a local repository (once)</a></li>
-<li class="chapter" data-level="4.4.3" data-path="contribute.html"><a href="contribute.html#step-3-configure-remote-that-points-to-the-upstream-repository-once"><i class="fa fa-check"></i><b>4.4.3</b> Step 3: Configure remote that points to the upstream repository (once)</a></li>
-<li class="chapter" data-level="4.4.4" data-path="contribute.html"><a href="contribute.html#step-4-pull"><i class="fa fa-check"></i><b>4.4.4</b> Step 4: Pull</a></li>
-<li class="chapter" data-level="4.4.5" data-path="contribute.html"><a href="contribute.html#step-5-work-commit-and-push"><i class="fa fa-check"></i><b>4.4.5</b> Step 5: Work, commit and push</a></li>
-<li class="chapter" data-level="4.4.6" data-path="contribute.html"><a href="contribute.html#step-6-submit-a-pull-request"><i class="fa fa-check"></i><b>4.4.6</b> Step 6: Submit a pull request</a></li>
-<li class="chapter" data-level="4.4.7" data-path="contribute.html"><a href="contribute.html#last-step-sync-local-master-with-upstream-master"><i class="fa fa-check"></i><b>4.4.7</b> Last Step: Sync local master with upstream master</a></li>
-</ul></li>
-<li class="chapter" data-level="4.5" data-path="contribute.html"><a href="contribute.html#resources-1"><i class="fa fa-check"></i><b>4.5</b> Resources</a></li>
+<li class="chapter" data-level="4.4" data-path="contribute.html"><a href="contribute.html#resources-1"><i class="fa fa-check"></i><b>4.4</b> Resources</a></li>
 </ul></li>
 <li class="part"><span><b>II Continuous Variables</b></span></li>
 <li class="chapter" data-level="5" data-path="histo.html"><a href="histo.html"><i class="fa fa-check"></i><b>5</b> Chart: Histogram</a><ul>
@@ -614,20 +606,28 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="28.7" data-path="themes.html"><a href="themes.html#external-resources-13"><i class="fa fa-check"></i><b>28.7</b> External Resources</a></li>
 </ul></li>
-<li class="chapter" data-level="29" data-path="github.html"><a href="github.html"><i class="fa fa-check"></i><b>29</b> GitHub Resources</a><ul>
+<li class="chapter" data-level="29" data-path="github.html"><a href="github.html"><i class="fa fa-check"></i><b>29</b> GitHub/Git Resources</a><ul>
 <li class="chapter" data-level="29.1" data-path="github.html"><a href="github.html#overview-23"><i class="fa fa-check"></i><b>29.1</b> Overview</a></li>
-<li class="chapter" data-level="29.2" data-path="github.html"><a href="github.html#tldr-11"><i class="fa fa-check"></i><b>29.2</b> tl;dr</a></li>
+<li class="chapter" data-level="29.2" data-path="github.html"><a href="github.html#introduction-3"><i class="fa fa-check"></i><b>29.2</b> Introduction</a></li>
 <li class="chapter" data-level="29.3" data-path="github.html"><a href="github.html#on-github"><i class="fa fa-check"></i><b>29.3</b> On GitHub</a></li>
-<li class="chapter" data-level="29.4" data-path="github.html"><a href="github.html#getting-started-1"><i class="fa fa-check"></i><b>29.4</b> Getting started</a></li>
-<li class="chapter" data-level="29.5" data-path="github.html"><a href="github.html#getting-help-1"><i class="fa fa-check"></i><b>29.5</b> Getting help</a></li>
-<li class="chapter" data-level="29.6" data-path="github.html"><a href="github.html#branching-out"><i class="fa fa-check"></i><b>29.6</b> Branching out</a></li>
-<li class="chapter" data-level="29.7" data-path="github.html"><a href="github.html#other-resources"><i class="fa fa-check"></i><b>29.7</b> Other Resources</a><ul>
-<li class="chapter" data-level="" data-path="github.html"><a href="github.html#general"><i class="fa fa-check"></i>General</a></li>
+<li class="chapter" data-level="29.4" data-path="github.html"><a href="github.html#on-git"><i class="fa fa-check"></i><b>29.4</b> On Git</a><ul>
+<li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-1-fork-the-upstream-repo-once"><i class="fa fa-check"></i>Step 1: Fork the upstream repo (once)</a></li>
+<li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-2-clone-origin-and-create-a-local-repository-once"><i class="fa fa-check"></i>Step 2: Clone origin and create a local repository (once)</a></li>
+<li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-3-configure-remote-that-points-to-the-upstream-repository-once"><i class="fa fa-check"></i>Step 3: Configure remote that points to the upstream repository (once)</a></li>
+<li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-4-pull"><i class="fa fa-check"></i>Step 4: Pull</a></li>
+<li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-5-work-commit-and-push"><i class="fa fa-check"></i>Step 5: Work, commit and push</a></li>
+<li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-6-submit-a-pull-request"><i class="fa fa-check"></i>Step 6: Submit a pull request</a></li>
+<li class="chapter" data-level="" data-path="github.html"><a href="github.html#last-step-sync-local-master-with-upstream-master"><i class="fa fa-check"></i>Last Step: Sync local master with upstream master</a></li>
+</ul></li>
+<li class="chapter" data-level="29.5" data-path="github.html"><a href="github.html#other-resources"><i class="fa fa-check"></i><b>29.5</b> Other resources</a><ul>
+<li class="chapter" data-level="" data-path="github.html"><a href="github.html#getting-help-1"><i class="fa fa-check"></i>Getting Help</a></li>
+<li class="chapter" data-level="" data-path="github.html"><a href="github.html#branching-out"><i class="fa fa-check"></i>Branching out</a></li>
+<li class="chapter" data-level="" data-path="github.html"><a href="github.html#more-resources-1"><i class="fa fa-check"></i>More Resources</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="30" data-path="publish.html"><a href="publish.html"><i class="fa fa-check"></i><b>30</b> Publishing Resources</a><ul>
 <li class="chapter" data-level="30.1" data-path="publish.html"><a href="publish.html#overview-24"><i class="fa fa-check"></i><b>30.1</b> Overview</a></li>
-<li class="chapter" data-level="30.2" data-path="publish.html"><a href="publish.html#tldr-12"><i class="fa fa-check"></i><b>30.2</b> tl;dr</a></li>
+<li class="chapter" data-level="30.2" data-path="publish.html"><a href="publish.html#tldr-11"><i class="fa fa-check"></i><b>30.2</b> tl;dr</a></li>
 <li class="chapter" data-level="30.3" data-path="publish.html"><a href="publish.html#bookdown"><i class="fa fa-check"></i><b>30.3</b> Bookdown</a></li>
 <li class="chapter" data-level="30.4" data-path="publish.html"><a href="publish.html#essentials"><i class="fa fa-check"></i><b>30.4</b> Essentials</a></li>
 <li class="chapter" data-level="30.5" data-path="publish.html"><a href="publish.html#adding-a-custom-domain-name"><i class="fa fa-check"></i><b>30.5</b> Adding a custom domain name</a></li>
@@ -642,8 +642,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="30.9" data-path="publish.html"><a href="publish.html#other-resources-1"><i class="fa fa-check"></i><b>30.9</b> Other resources</a></li>
 </ul></li>
 <li class="chapter" data-level="31" data-path="workflow.html"><a href="workflow.html"><i class="fa fa-check"></i><b>31</b> Workflow Notes</a></li>
-<li class="chapter" data-level="32" data-path="github.html"><a href="github.html#general"><i class="fa fa-check"></i><b>32</b> General Resources</a><ul>
-<li class="chapter" data-level="32.1" data-path="general.html"><a href="general.html"><i class="fa fa-check"></i><b>32.1</b> Books</a></li>
+<li class="chapter" data-level="32" data-path="general.html"><a href="general.html"><i class="fa fa-check"></i><b>32</b> General Resources</a><ul>
+<li class="chapter" data-level="32.1" data-path="general.html"><a href="general.html#books"><i class="fa fa-check"></i><b>32.1</b> Books</a></li>
 <li class="chapter" data-level="32.2" data-path="general.html"><a href="general.html#cheatsheets"><i class="fa fa-check"></i><b>32.2</b> Cheatsheets</a></li>
 <li class="chapter" data-level="32.3" data-path="general.html"><a href="general.html#articles"><i class="fa fa-check"></i><b>32.3</b> Articles</a></li>
 <li class="chapter" data-level="32.4" data-path="general.html"><a href="general.html#meetups"><i class="fa fa-check"></i><b>32.4</b> Meetups</a></li>
@@ -706,7 +706,7 @@ function unhover(element) {
 <div id="basics" class="section level1">
 <h1><span class="header-section-number">2</span> R Basics</h1>
 <p><img src="images/banners/banner_basics.png" /></p>
-<p>So…there is soooo much to the world of R. Textbooks, cheatsheets, exercises, and other buzzwords full of resources you could go through. There are over 13800 packages on <a href="https://cran.r-project.org" target="_blank">CRAN</a>, the network through which R code and packages are distributed. It can be overwhelming. However, bear in mind that R is being used for a lot of different things, not all of which are relevant to EDAV.</p>
+<p>So…there is soooo much to the world of R. Textbooks, cheatsheets, exercises, and other buzzwords full of resources you could go through. There are over 13900 packages on <a href="https://cran.r-project.org" target="_blank">CRAN</a>, the network through which R code and packages are distributed. It can be overwhelming. However, bear in mind that R is being used for a lot of different things, not all of which are relevant to EDAV.</p>
 <p>To help you navigate the landscape, here we provide a collection of resources that you should be familiar with in the context of this course. This is not to say that any of these resources are prerequisites, but they will come up in the course and we want to give you places to learn about them.</p>
 <p>Since people come with a variety of backgrounds, we will try to provide the essentials as well as some resources for more advanced users. Do not feel you have to go through all of these resources, but know that they are here if/when you need them. <i class="far fa-smile-beam"></i></p>
 <div id="essentials-checklist" class="section level2">
