Update the book

--- a/contribute.html
+++ b/contribute.html
@@ -720,8 +720,7 @@ function unhover(element) {
 <ul>
 <li><p><i class="fas fa-exclamation-circle"></i> For <strong>large or small ideas, without providing the code</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#submit-an-issue"><strong>submit an issue</strong></a> (very simple, much appreciated)</p></li>
 <li><p><i class="fas fa-edit"></i> For <strong>simple changes</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#contribute-online"><strong>contribute online</strong></a> (this can all be done on GitHub.com… we got a full walkthrough explaining how)</p></li>
-<li><p><i class="fas fa-code-branch"></i> For <strong>more complex changes</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#contribute-code"><strong>work locally</strong></a> (the next level, also much appreciated)</p></li>
-<li><p><i class="fas fa-code-branch"></i> For <strong>adventurous git/GitHub users</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#solve-an-open-issue"><strong>solve an open issue</strong></a> (more advanced/open-ended)</p></li>
+<li><p><i class="fas fa-code-branch"></i> For <strong>more complex changes</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#contribute-code"><strong>work locally</strong></a> (the next level, also much appreciated) – adventurous users may <a href="contribute.html#solve-an-open-issue"><strong>solve an open issue</strong></a> (more advanced/open-ended)</p></li>
 </ul>
 <p>Below you’ll find more detail on each option.</p>
 <p>Happy coding! <i class="fas fa-heart"></i></p>
