Update the book

--- a/contribute.html
+++ b/contribute.html
@@ -256,7 +256,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4" data-path="contribute.html"><a href="contribute.html"><i class="fa fa-check"></i><b>4</b> Contribute to this Resource</a><ul>
 <li class="chapter" data-level="4.1" data-path="contribute.html"><a href="contribute.html#overview-2"><i class="fa fa-check"></i><b>4.1</b> Overview</a></li>
 <li class="chapter" data-level="4.2" data-path="contribute.html"><a href="contribute.html#why-contribute"><i class="fa fa-check"></i><b>4.2</b> Why contribute?</a></li>
-<li class="chapter" data-level="4.3" data-path="contribute.html"><a href="contribute.html#ways-you-can-contribute-using-github.com-only"><i class="fa fa-check"></i><b>4.3</b> Ways you can contribute (using GitHub.com only)</a><ul>
+<li class="chapter" data-level="4.3" data-path="contribute.html"><a href="contribute.html#ways-you-can-contribute"><i class="fa fa-check"></i><b>4.3</b> Ways you can contribute</a><ul>
 <li class="chapter" data-level="4.3.1" data-path="contribute.html"><a href="contribute.html#submit-an-issue"><i class="fa fa-check"></i><b>4.3.1</b> Submit an issue</a></li>
 <li class="chapter" data-level="4.3.2" data-path="contribute.html"><a href="contribute.html#contribute-online"><i class="fa fa-check"></i><b>4.3.2</b> Contribute online</a></li>
 <li class="chapter" data-level="4.3.3" data-path="contribute.html"><a href="contribute.html#contribute-code"><i class="fa fa-check"></i><b>4.3.3</b> Contribute code</a></li>
@@ -714,13 +714,13 @@ function unhover(element) {
 <h2><span class="header-section-number">4.2</span> Why contribute?</h2>
 <p>We don’t want <em>edav.info/</em> to be just another resource. Rather, we want it to be <em>your</em> resource. If there are things that trip you up or cause you frustration, chances are you’re not alone. Everyone comes to this course with different backgrounds and expertise. Being able to collect all that knowledge in one place is this resource’s mission and you can help move that mission forward.</p>
 </div>
-<div id="ways-you-can-contribute-using-github.com-only" class="section level2">
-<h2><span class="header-section-number">4.3</span> Ways you can contribute (using GitHub.com only)</h2>
+<div id="ways-you-can-contribute" class="section level2">
+<h2><span class="header-section-number">4.3</span> Ways you can contribute</h2>
 <p>There are many ways you can contribute:</p>
 <ul>
 <li><p><i class="fas fa-exclamation-circle"></i> For <strong>large or small ideas, without providing the code</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#submit-an-issue"><strong>submit an issue</strong></a> (very simple, much appreciated)</p></li>
-<li><p><i class="fas fa-edit"></i> For <strong>simple changes</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#contribute-online"><strong>contribute online</strong></a> (this can all be done on GitHub.com… we got a full walkthrough explaining how)</p></li>
-<li><p><i class="fas fa-code-branch"></i> For <strong>more complex changes</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#contribute-code"><strong>work locally</strong></a> (the next level, also much appreciated) – adventurous users may <a href="contribute.html#solve-an-open-issue"><strong>solve an open issue</strong></a> (more advanced/open-ended)</p></li>
+<li><p><i class="fas fa-edit"></i> For <strong>simple changes</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#contribute-online"><strong>contribute online</strong></a> (this can all be done on <strong>GitHub.com</strong>… we got a full walkthrough explaining how)</p></li>
+<li><p><i class="fas fa-code-branch"></i> For <strong>more complex changes</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#contribute-code"><strong>install Git and work locally</strong></a> (the next level, also much appreciated) – adventurous users may <a href="contribute.html#solve-an-open-issue"><strong>solve an open issue</strong></a> (more advanced/open-ended)</p></li>
 </ul>
 <p>Below you’ll find more detail on each option.</p>
 <p>Happy coding! <i class="fas fa-heart"></i></p>
