--- a/contribute.html
+++ b/contribute.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Zach Bogart, Joyce Robbins">
 
 
-<meta name="date" content="2019-03-24">
+<meta name="date" content="2019-03-27">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -69,7 +69,7 @@
 <script src="libs/leaflet-markercluster-1.0.5/leaflet.markercluster.layersupport.js"></script>
 <link href="libs/vis-4.20.1/vis.css" rel="stylesheet" />
 <script src="libs/vis-4.20.1/vis.min.js"></script>
-<script src="libs/visNetwork-binding-2.0.5/visNetwork.js"></script>
+<script src="libs/visNetwork-binding-2.0.6/visNetwork.js"></script>
 <!-- 
 Favicon 
   - included in the toolbar of every page
@@ -755,7 +755,7 @@ function unhover(element) {
 </ul>
 <div id="direct-contribution-walkthrough" class="section level4">
 <h4><span class="header-section-number">4.3.2.1</span> Direct contribution walkthrough</h4>
-<p>This is a full walkthough on proposing a change to <em>edav.info/</em>. It follows a hypothetical student that spots a typo and uses a pull request to fix it. It’s a little long, but don’t get scared; it’s a great way to learn about GitHub and it’s almost entirely hitting big green buttons!</p>
+<p>This is a full walkthough on proposing a change to <em>edav.info/</em>, however the instructions are the same for making changes to any repo. It follows a hypothetical student that spots a typo and uses a pull request to fix it. It’s a little long, but don’t get scared; it’s a great way to learn about GitHub and it’s almost entirely hitting big green buttons!</p>
 <ol style="list-style-type: decimal">
 <li><p>Let’s <strong>find something to change</strong>. I’m pretty sure they meant to write “repository” here. Oops. Let’s fix it for them!
 <img src="images/excited_student/directly-01.png" />
@@ -763,7 +763,7 @@ function unhover(element) {
 <li><p>To make the fix, we <strong>click on the edit icon</strong>, <i class="fas fa-edit"></i>, at the top of the page. This will take us to their GitHub repo, where all the code for this resource is stored. <br> <strong>Note</strong>: You need to have a valid GitHub account to contribute. In this example, we are using a dummy account called <strong>excited-student</strong> so if you see it in a screenshot, know that it would be replaced by your own username.
 <img src="images/excited_student/directly-02.png" />
 <em>Hit this icon to go to GitHub.</em></p></li>
-<li><p>We haven’t forked the repo yet, so GitHub shows us a page like the one below. No worries! We just <strong>hit the big green button</strong> labeled <strong><i class="fas fa-code-branch"></i> Fork this repository and propose changes</strong> and we’ll be good to go (as you will see, big green buttons are our friends). For more info on forking repos, the <a href="https://guides.github.com/activities/forking/" target="_blank">GitHub Guide on Forking Projects</a> is very informative. <strong>Note</strong>: you will not have to fork the repo every time. If you propose another change in the future, the edit icon, <i class="fas fa-edit"></i>, will jump you directly to this point of the walkthrough. Just remember to <a href="https://help.github.com/articles/syncing-a-fork/" target="_blank">keep your fork up to date</a>.
+<li><p>We haven’t forked the repo yet, so GitHub shows us a page like the one below. No worries! We just <strong>hit the big green button</strong> labeled <strong><i class="fas fa-code-branch"></i> Fork this repository and propose changes</strong> and we’ll be good to go (as you will see, big green buttons are our friends). For more info on forking repos, the <a href="https://guides.github.com/activities/forking/" target="_blank">GitHub Guide on Forking Projects</a> is very informative. <strong>Note</strong>: you will not have to fork the repo every time. If you propose another change in the future, the edit icon, <i class="fas fa-edit"></i>, will jump you directly to this point of the walkthrough.
 <img src="images/excited_student/directly-03.png" />
 <em>Haven’t forked the repo before? No worries; the big green button will solve everything.</em></p></li>
 <li><p>Now that we have successfully forked the repo, we can <strong>see the code</strong> for the page we want to edit. <br><strong>Note</strong>: That little blue blurb at the top is spelling out what is happening/going to happen: we have made a copy of a repo because we don’t have write access to it . So, after we make our change on this page, we will inform the owners of the repo about our edits by using a pull request. GitHub can be super overwhelming, but it will try its darndest to inform you what will happen along the way.
@@ -772,7 +772,7 @@ function unhover(element) {
 <li><p>Let’s fix that embarrassing typo! We <strong>update the code</strong> right in this editor, <strong>include an explanation</strong> for what we changed/why we made the change, and then <strong>hit the big green button</strong> labeled <strong>Propose file change</strong>. Gotta love those big green buttons!
 <img src="images/excited_student/directly-05.png" />
 <em>Make your edits, include a quick explanation, and hit the big green button.</em></p></li>
-<li><p>Now GitHub is once again helping out by letting us review the changes we made. On this page we can <strong>review our proposed changes</strong> by scrolling down and looking at the <a href="https://git-scm.com/docs/git-diff" target="_blank">diffs</a>. Our fix is very simple so there isn’t much to see. Once again, we are going to <strong>push the big green button</strong>, this time labeled <strong>Create pull request</strong>. This will start the process of letting the <em>edav.info/</em> people know that we would like them to include our changes (in git-speak, we are <em>requesting</em> that the <em>edav.info/</em> people do a <code>git merge</code> to update their files with our proposed changes.)
+<li><p>Now GitHub is once again helping out by letting us review the changes we made. On this page we can <strong>review our proposed changes</strong> by scrolling down and looking at the <a href="https://git-scm.com/docs/git-diff" target="_blank">diffs</a>. Our fix is very simple so there isn’t much to see. Once again, we are going to <strong>push the big green button</strong>, this time labeled <strong>Create pull request</strong>. This will start the process of letting the <em>edav.info/</em> people know that we would like them to include our changes (in git-speak, we are <em>requesting</em> that the <em>edav.info/</em> people do a <code>git merge</code> to update their files with our proposed changes.) Note that the proposed changes are in a branch called <strong>patch-1</strong> on our repo; we are asking to merge them into the <strong>master</strong> branch on their repo.
 <img src="images/excited_student/directly-06.png" />
 <em>Chance to review your changes. Once satisfied, hit the big green button to start a pull request.</em></p></li>
 <li><p>Here we are at the pull request page. Notice the green checkmark that says “<em>Able to merge</em>” (a good sign that everything is going smoothly). Now we <strong>explain our pull request</strong> with some comments and, once again, <strong>hit the big green button</strong> labeled <strong>Create pull request</strong>. <br><strong>Note</strong>: You may be asking, “Why do I have to type this explanation in again?”. This is because the explanation we wrote in Step 5 (where we edited the file) is a <em>commit</em>. We could have had <em>multiple</em> commits at once that we wanted to bundle into <em>one</em> pull request. This step is a way to explain the pull request as a whole. It is redundant for us because our change is so small and only has one commit. Still totally lost? This <a href="https://guides.github.com/introduction/flow/" target="_blank">GitHub Guide on Understanding the GitHub Flow</a> is an incredibly helpful read and <a href="github.html">our GitHub Resources page</a> also has a lot of helpful links.
