--- a/github.html
+++ b/github.html
@@ -258,9 +258,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4.2" data-path="contribute.html"><a href="contribute.html#why-contribute"><i class="fa fa-check"></i><b>4.2</b> Why contribute?</a></li>
 <li class="chapter" data-level="4.3" data-path="contribute.html"><a href="contribute.html#ways-you-can-contribute"><i class="fa fa-check"></i><b>4.3</b> Ways you can contribute</a><ul>
 <li class="chapter" data-level="4.3.1" data-path="contribute.html"><a href="contribute.html#submit-an-issue"><i class="fa fa-check"></i><b>4.3.1</b> Submit an issue</a></li>
-<li class="chapter" data-level="4.3.2" data-path="contribute.html"><a href="contribute.html#contribute-online"><i class="fa fa-check"></i><b>4.3.2</b> Contribute online</a></li>
-<li class="chapter" data-level="4.3.3" data-path="contribute.html"><a href="contribute.html#contribute-code"><i class="fa fa-check"></i><b>4.3.3</b> Contribute code</a></li>
-<li class="chapter" data-level="4.3.4" data-path="contribute.html"><a href="contribute.html#solve-an-open-issue"><i class="fa fa-check"></i><b>4.3.4</b> Solve an open issue</a></li>
+<li class="chapter" data-level="4.3.2" data-path="contribute.html"><a href="contribute.html#github-only-contribution"><i class="fa fa-check"></i><b>4.3.2</b> GitHub only contribution</a></li>
 </ul></li>
 <li class="chapter" data-level="4.4" data-path="contribute.html"><a href="contribute.html#resources-1"><i class="fa fa-check"></i><b>4.4</b> Resources</a></li>
 </ul></li>
@@ -769,7 +767,7 @@ function unhover(element) {
 </div>
 <div id="step-6-submit-a-pull-request" class="section level3 unnumbered">
 <h3>Step 6: Submit a pull request</h3>
-<p>Now you are able to see the branch you have created on the Github page. The next step is to submit a pull request and the process is exactly the same as in <a href="contribute.html#direct-contribution-walkthrough">Direct contribution walkthrough</a>.</p>
+<p>Now you are able to see the branch you have created on the Github page. The next step is to submit a pull request and the process is exactly the same as in [Direct contribution walkthrough].</p>
 </div>
 <div id="last-step-sync-local-master-with-upstream-master" class="section level3 unnumbered">
 <h3>Last Step: Sync local master with upstream master</h3>
