--- a/contribute.html
+++ b/contribute.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Zach Bogart, Joyce Robbins">
 
 
-<meta name="date" content="2019-03-27">
+<meta name="date" content="2019-03-28">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -256,11 +256,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4" data-path="contribute.html"><a href="contribute.html"><i class="fa fa-check"></i><b>4</b> Contribute to this Resource</a><ul>
 <li class="chapter" data-level="4.1" data-path="contribute.html"><a href="contribute.html#overview-2"><i class="fa fa-check"></i><b>4.1</b> Overview</a></li>
 <li class="chapter" data-level="4.2" data-path="contribute.html"><a href="contribute.html#why-contribute"><i class="fa fa-check"></i><b>4.2</b> Why contribute?</a></li>
-<li class="chapter" data-level="4.3" data-path="contribute.html"><a href="contribute.html#ways-you-can-contribute"><i class="fa fa-check"></i><b>4.3</b> Ways you can contribute</a><ul>
-<li class="chapter" data-level="4.3.1" data-path="contribute.html"><a href="contribute.html#submit-an-issue"><i class="fa fa-check"></i><b>4.3.1</b> Submit an issue</a></li>
-<li class="chapter" data-level="4.3.2" data-path="contribute.html"><a href="contribute.html#github-only-contribution"><i class="fa fa-check"></i><b>4.3.2</b> GitHub only contribution</a></li>
-</ul></li>
-<li class="chapter" data-level="4.4" data-path="contribute.html"><a href="contribute.html#resources-1"><i class="fa fa-check"></i><b>4.4</b> Resources</a></li>
+<li class="chapter" data-level="4.3" data-path="contribute.html"><a href="contribute.html#ways-you-can-contribute"><i class="fa fa-check"></i><b>4.3</b> Ways you can contribute</a></li>
+<li class="chapter" data-level="4.4" data-path="contribute.html"><a href="contribute.html#submit-an-issue"><i class="fa fa-check"></i><b>4.4</b> Submit an issue</a></li>
+<li class="chapter" data-level="4.5" data-path="contribute.html"><a href="contribute.html#github-only-walkthrough"><i class="fa fa-check"></i><b>4.5</b> GitHub only walkthrough</a></li>
+<li class="chapter" data-level="4.6" data-path="contribute.html"><a href="contribute.html#resources-1"><i class="fa fa-check"></i><b>4.6</b> Resources</a></li>
 </ul></li>
 <li class="part"><span><b>II Continuous Variables</b></span></li>
 <li class="chapter" data-level="5" data-path="histo.html"><a href="histo.html"><i class="fa fa-check"></i><b>5</b> Chart: Histogram</a><ul>
@@ -606,9 +605,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="29" data-path="github.html"><a href="github.html"><i class="fa fa-check"></i><b>29</b> GitHub/Git Resources</a><ul>
 <li class="chapter" data-level="29.1" data-path="github.html"><a href="github.html#overview-23"><i class="fa fa-check"></i><b>29.1</b> Overview</a></li>
-<li class="chapter" data-level="29.2" data-path="github.html"><a href="github.html#introduction-3"><i class="fa fa-check"></i><b>29.2</b> Introduction</a></li>
-<li class="chapter" data-level="29.3" data-path="github.html"><a href="github.html#on-github"><i class="fa fa-check"></i><b>29.3</b> On GitHub</a></li>
-<li class="chapter" data-level="29.4" data-path="github.html"><a href="github.html#on-git"><i class="fa fa-check"></i><b>29.4</b> On Git</a><ul>
+<li class="chapter" data-level="29.2" data-path="github.html"><a href="github.html#first-things-first"><i class="fa fa-check"></i><b>29.2</b> First things first</a></li>
+<li class="chapter" data-level="29.3" data-path="github.html"><a href="github.html#the-no-branch-workflow-a.k.a-master-to-master"><i class="fa fa-check"></i><b>29.3</b> The no branch workflow, a.k.a master-to-master</a></li>
+<li class="chapter" data-level="29.4" data-path="github.html"><a href="github.html#branching"><i class="fa fa-check"></i><b>29.4</b> Branching</a><ul>
 <li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-1-fork-the-upstream-repo-once"><i class="fa fa-check"></i>Step 1: Fork the upstream repo (once)</a></li>
 <li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-2-clone-origin-and-create-a-local-repository-once"><i class="fa fa-check"></i>Step 2: Clone origin and create a local repository (once)</a></li>
 <li class="chapter" data-level="" data-path="github.html"><a href="github.html#step-3-configure-remote-that-points-to-the-upstream-repository-once"><i class="fa fa-check"></i>Step 3: Configure remote that points to the upstream repository (once)</a></li>
@@ -717,14 +716,15 @@ function unhover(element) {
 <p>There are many ways you can contribute:</p>
 <ul>
 <li><p><i class="fas fa-exclamation-circle"></i> For <strong>large or small ideas, without providing the code</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#submit-an-issue"><strong>submit an issue</strong></a> (very simple, much appreciated)</p></li>
-<li><p><i class="fas fa-edit"></i> For <strong>simple changes</strong> <i class="fas fa-arrow-right"></i> <a href="#contribute-online"><strong>contribute online</strong></a> (this can all be done on <strong>GitHub.com</strong>… we got a full walkthrough explaining how)</p></li>
+<li><p><i class="fas fa-edit"></i> For <strong>simple changes</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#github-only-walkthrough"><strong>contribute on GitHub</strong></a> (this can all be done on <strong>GitHub.com</strong>… we’ve got a full walkthrough explaining how)</p></li>
 <li><p><i class="fas fa-code-branch"></i> For <strong>more complex changes</strong> <i class="fas fa-arrow-right"></i> **install Git and <a href="github.html">work locally**</a> (the next level, also much appreciated) – adventurous users may <a href="#solve-an-open-issue"><strong>solve an open issue</strong></a> (more advanced/open-ended)</p></li>
 </ul>
 <p><a href="github.html">guide on using git</a></p>
 <p>Below you’ll find more detail on each option.</p>
 <p>Happy coding! <i class="fas fa-heart"></i></p>
-<div id="submit-an-issue" class="section level3">
-<h3><span class="header-section-number">4.3.1</span> Submit an issue</h3>
+</div>
+<div id="submit-an-issue" class="section level2">
+<h2><span class="header-section-number">4.4</span> Submit an issue</h2>
 <p>If your proposed change is more complex, consider letting us know by <strong>submitting an issue</strong>. Maybe you have a great idea for a brand new chapter, something we have not covered but would like to see here in this resource (a new chart page, say; or a walkthrough using a specific tool/package). It may be a little too complicated to <a href="#contribute-directly">contribute directly</a>. What to do? Submit an issue, of course!</p>
 <p><a href="https://guides.github.com/features/issues/" target="_blank">Issues</a> are tasks you can post to a GitHub repo that people can then take on and fix. They can be small (“this link is broken” / “add this resource”) or complex (“I would love to have a chapter on…” / “reformat this code chunk in this way”). Once posted, issues can be taken on by anyone.</p>
 <p>You do <em>not</em> have to know how to code up your issue; from fixing a bug to proposing a resource we should link to, we appreciate any feedback you have and will take it all into consideration.</p>
@@ -743,13 +743,11 @@ function unhover(element) {
 <li>For more info, please consider reading the <a href="https://opensource.guide/how-to-contribute/" target="_blank">Open Source Guide</a> on how to contribute.</li>
 </ul>
 </div>
-<div id="github-only-contribution" class="section level3">
-<h3><span class="header-section-number">4.3.2</span> GitHub only contribution</h3>
+<div id="github-only-walkthrough" class="section level2">
+<h2><span class="header-section-number">4.5</span> GitHub only walkthrough</h2>
 <p><em>What does that mean? That you do everything on github.com. You will need to create a github.com account if you don’t have one, but that’s it.</em></p>
-<p>One way to contribute to <em>edav.info/</em> is to <strong>contribute directly</strong> by editing a chapter. At the top of every page of this resource, you will see an icon that looks like this: <i class="fas fa-edit"></i>. Clicking it will open a new tab where you can edit the markdown for that page on <a href="https://github.com/jtr13/EDAV" target="_blank">our GitHub repo</a> and submit your change as a pull request. Essentially, you will create a copy of our repo, make your desired changes, and suggest to us that we include them. If we approve of your changes, they will be rendered and published to the site.</p>
+<p>One way to contribute to <em>edav.info/</em> is to contribute directly by editing a chapter. At the top of every page of this resource, you will see an icon that looks like this: <i class="fas fa-edit"></i>. Clicking it will open a new tab where you can edit the markdown for that page on <a href="https://github.com/jtr13/EDAV" target="_blank">our GitHub repo</a> and submit your change as a pull request. Essentially, you will create a copy of our repo, make your desired changes, and suggest to us that we include them. If we approve of your changes, they will be rendered and published to the site.</p>
 <p>Contributing directly in this manner works best if the change you are proposing is something relatively small, such as a typo/grammatical error or an unclear phrasing/explanation. In general, it doesn’t work well to propose changes to code directly on GitHub.</p>
-<div id="github-only-walkthrough" class="section level4">
-<h4><span class="header-section-number">4.3.2.1</span> GitHub only walkthrough</h4>
 <p>This is a full walkthough on proposing a change to <em>edav.info/</em>, however the instructions are the same for making changes to any repo. It follows a hypothetical student that spots a typo and uses a pull request to fix it. It’s a little long, but don’t get scared; it’s a great way to learn about GitHub and it’s almost entirely hitting big green buttons!</p>
 <ol style="list-style-type: decimal">
 <li><p>Let’s <strong>find something to change</strong>. I’m pretty sure they meant to write “repository” here. Oops. Let’s fix it for them!
@@ -810,17 +808,15 @@ function unhover(element) {
 <a href="https://giphy.com/gifs/reaction-food-simpsons-nxscd2YGVf6xi" target="_blank">via GIPHY</a>
 </center>
 <p><br></p>
-</div>
 <div id="the-next-edit" class="section level4">
-<h4><span class="header-section-number">4.3.2.2</span> The next edit</h4>
+<h4><span class="header-section-number">4.5.0.1</span> The next edit</h4>
 <ol start="13" style="list-style-type: decimal">
 <li><strong>Looking ahead</strong> If you have a second edit to propose, simply follow the instructions again. As noted above, the second time through you will not be asked to fork the repo again. If you look closely at the pull request for the second edit, the branch to be merged will be named <strong>patch-2</strong> instead of <strong>patch-1</strong>. Although GitHub keeps mentioning “your fork” as you proceed through the process, this is not really something that you have to concern yourself with. In fact, you’re better off not! In fact, you should stay away from your fork – that is, your copy of the <code>EDAV</code> repo in <em>your</em> GitHub account, because it will inevitably get behind the main one and cause you trouble if you work on the old version and then try to create a pull request. So, the bottom line is, each time you have an edit to propose, go directly to either <code>edav.info</code> or <code>https://github.com/jtr13/EDAV</code> and start the editing process there, <em>not on your fork!</em>.</li>
 </ol>
 </div>
 </div>
-</div>
 <div id="resources-1" class="section level2">
-<h2><span class="header-section-number">4.4</span> Resources</h2>
+<h2><span class="header-section-number">4.6</span> Resources</h2>
 <ul>
 <li><a href="https://github.com/jtr13/EDAV" target="_blank">Our GitHub repo</a>: Link to the GitHub repository for <em>edav.info/</em></li>
 <li><a href="https://opensource.guide/how-to-contribute/" target="_blank">Open Source Guide</a>: Fantastic guide on how to contribute to projects like this one</li>
