Update the book

--- a/github.html
+++ b/github.html
@@ -741,7 +741,8 @@ function unhover(element) {
 <h3>Step 1: Fork the upstream repo (once)</h3>
 <p><em>Skip this step if you’re syncing with your own repo.</em></p>
 <p>Let’s say you want to contribute to EDAV! Fork <a href="https://github.com/jtr13/EDAV" target="_blank">our GitHub repo</a> and then on your own GitHub page, you will see a forked <strong>EDAV</strong> repo under the repositories section. Note, from now on, the term <strong>upstream repository</strong> refers to the original repo of the project that you forked and the term <strong>origin repository</strong> refers to the repo that you created or forked on GitHub. From your respective, both <strong>upstream</strong> and <strong>origin</strong> are remote repositories.
-<img src="images/Git_step1.PNG" /></p>
+<img src="images/git/fork.png" />
+<em>A fork of jtr13/EDAV</em></p>
 </div>
 <div id="step-2-clone-origin-and-create-a-local-repository-once" class="section level3 unnumbered">
 <h3>Step 2: Clone origin and create a local repository (once)</h3>
