Update the book

--- a/contribute.html
+++ b/contribute.html
@@ -723,7 +723,7 @@ function unhover(element) {
 <ul>
 <li><p><i class="fas fa-exclamation-circle"></i> For <strong>large or small ideas, without providing the code</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#submit-an-issue"><strong>submit an issue</strong></a> (very simple, much appreciated)</p></li>
 <li><p><i class="fas fa-edit"></i> For <strong>simple changes</strong> <i class="fas fa-arrow-right"></i> <a href="contribute.html#github-only-walkthrough"><strong>contribute on GitHub</strong></a> (this can all be done on <strong>GitHub.com</strong>… we’ve got a full walkthrough explaining how)</p></li>
-<li><p><i class="fas fa-code-branch"></i> For <strong>more complex changes</strong> <i class="fas fa-arrow-right"></i> **install Git and <a href="github.html">work locally**</a> (the next level, also much appreciated) – adventurous users may solve <a href="https://github.com/jtr13/EDAV/issues"><strong>an open issue</strong></a> (more advanced/open-ended)</p></li>
+<li><p><i class="fas fa-code-branch"></i> For <strong>more complex changes</strong> <i class="fas fa-arrow-right"></i> install Git and and work locally. Detailed instructions can be found in our <a href="github.html">Git/GitHub Resources chapter</a> (the next level, also much appreciated) – adventurous users may solve <a href="https://github.com/jtr13/EDAV/issues"><strong>an open issue</strong></a> (more advanced/open-ended)</p></li>
 </ul>
 </div>
 <div id="submit-an-issue" class="section level2">
